syntax = "proto3";

option go_package = "./pb";

package pb;

import "message.proto";

service Node {
  // 触发事件
  rpc Trigger(TriggerRequest) returns (TriggerReply) {}
  // 投递消息
  rpc Deliver(DeliverRequest) returns (DeliverReply) {}
}

message TriggerRequest {
  int32 Event = 1; // 事件
  string GID = 2; // 网关ID
  int64 CID = 3; // 连接ID
  int64 UID = 4; // 用户ID
}

message TriggerReply {
}

message DeliverRequest {
  string GID = 1; // 网关ID
  string NID = 2; // 节点ID
  int64 CID = 3; // 连接ID
  int64 UID = 4; // 用户ID
  Message Message = 5; // 消息
}

message DeliverReply {
}